final fix on mobile screen

--- a/static/css/mediaqueries.css
+++ b/static/css/mediaqueries.css
@@ -86,6 +86,10 @@
         font-size: 22px;
     }
 
+    .logo-text {
+        margin-top: 5vh;
+    }
+
     .header-text h2 {
         font-size: 19px;
     }
